Always count rendered frames; fixes drop flakiness.

Not adding to the render count when a frame is rendered just makes
handling dropped frames tricky and flaky. Instead the only thing we
really care about is not carrying forward overage to the next frame
after rendering starts (or restarts).

BUG=656231
TEST=new unittest.

Review-Url: https://codereview.chromium.org/2452523004
Cr-Commit-Position: refs/heads/master@{#428267}

Former-commit-id: 71bec519151a602e5a9334d420c12b1f3f9301f1